# fm-sdk

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
mcp-server/: pyproject.toml  server.py
sdks/java/: README.md  pom.xml
sdks/java/examples/ticker/: pom.xml
sdks/java/examples/ticker/src/main/java/fm/ticker/: Ticker.java
sdks/java/fm-sdk/: pom.xml
sdks/java/fm-sdk/src/main/java/fm/: DefaultMarketView.java  Events.java  Exceptions.java  Flexemarkets.java  GapEvent.java  MarketView.java  MarketViewHandle.java  MarketplaceTrades.java  OrderBook.java  OrderBooks.java  OrderUtils.java  OrdersUpdate.java  ReconnectEvent.java  Snapshot.java  Subscription.java  Trades.java  Types.java
sdks/java/fm-sdk/src/test/java/fm/: FlexemarketsEndpointTest.java  FlexemarketsLiveServerTest.java
sdks/java/fm-spi/: pom.xml
sdks/java/fm-spi/src/main/java/fm/service/: Service.java  ServiceProvider.java
sdks/java/robot-spi/: pom.xml
sdks/java/robot-spi/src/main/java/fm/robot/spi/: Robot.java  RobotPlugin.java  SpiVersion.java
sdks/python/: README.md  pyproject.toml  ticker.py
sdks/python/fm/: __init__.py  client.py  events.py  exceptions.py  market_view.py  order_utils.py  orderbook.py  snapshot.py  trades.py  types.py
sdks/python/tests/: test_endpoint_resolution.py  test_flexemarkets_live_server.py
sdks/python/tools/: connect_stress.py  marketplace_load_repro.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: client.ts  index.ts  market-view.ts  order-utils.ts  orderbook.ts  snapshot.ts  stomp.ts  ticker.ts  trades.ts  types.ts
sdks/typescript/test/: endpoint-resolution.test.ts  flexemarkets-live-server.test.ts
