[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-sdk"
dynamic = ["version"]
description = "Python SDK for the Flexemarkets API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[tool.hatch.version]
path = "../../VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["fm"]
